# GRAMSBalloon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
command_sender/source/: .gitignore  CMakeLists.txt  CommandBuilder.cc  CommandBuilder.hh  CommandDefinition.cc  CommandDefinition.hh  CommandPlanRunner.cc  CommandSaver.cc  CommandSaver.hh  CommandSender.cc  CommandSender.hh  DateManager.cc  DateManager.hh  SaveCommand.cc  SaveCommand.hh  SaveCommandLog.cc  SaveCommandLog.hh  command2hex_func.cc  dump_command.cc  network.cfg  run_command_plan.cc  send_command.cc  send_command_raw.cc
command_sender/source/obsolete/: command2hex.cc  command2hex.hpp  command2hex.py  send_hex.cc
onboard/: CMakeLists.txt
onboard/rubyext/: CMakeLists.txt  GRAMSBalloon.i
onboard/source/BME68x-Sensor-API/: CMakeLists.txt
onboard/source/ICM20948-linux-i2c/: CMakeLists.txt
onboard/source/ICM20948-linux-i2c/I2C/: CMakeLists.txt  README.md
onboard/source/core/: CMakeLists.txt
onboard/source/core/include/: ANLoutput.hh  AnalogDiscoveryIO.hh  BME680IO.hh  BaseTelemetryDefinition.hh  BinaryFileManipulater.hh  CRC16.hh  CommandDefinition.hh  CommunicationCodes.hh  CommunicationFormat.hh  CommunicationSaver.hh  DAQIO.hh  DateManager.hh  EncodedSerialCommunication.hh  ErrorManager.hh  HubHKTelemetry.hh  ICM20948IO.hh  IridiumPacketPool.hh  MAX31865IO.hh  MHADCMapping.hh  MQTTFormatConverter.hh  MosquittoIO.hh  MySQLIO.hh  OrientationInformation.hh  SPIInterface.hh  SampleTelemetry.hh  SerialCommunication.hh  SlowADCIO.hh  SocketCommunication.hh  SocketCommunicationClient.hh  SocketCommunicationServer.hh  SocketSession.hh  SocketSessionForReader.hh  SocketSessionForWriter.hh  TelemetryDefinition.hh  TerminalColoring.hh  VHKTelemetryMapping.hh
onboard/source/core/src/: AnalogDiscoveryIO.cc  BME680IO.cc  BaseTelemetryDefinition.cc  CRC16.cc  CommandDefinition.cc  CommunicationFormat.cc  DAQIO.cc  EncodedSerialCommunication.cc  ErrorManager.cc  HubHKTelemetry.cc  ICM20948IO.cc  IridiumPacketPool.cc  MAX31865IO.cc  MHADCMapping.cc  MQTTFormatConverter.cc  MosquittoIO.cc  MySQLIO.cc  OrientationInformation.cc  SampleTelemetry.cc  SerialCommunication.cc  SlowADCIO.cc  SocketCommunication.cc  SocketCommunicationClient.cc  SocketCommunicationServer.cc  SocketSession.cc  SocketSessionForReader.cc  SocketSessionForWriter.cc  TelemetryDefinition.cc  VHKTelemetryMapping.cc
onboard/source/demo/include/: ControlHighVoltageDemo.hh  GBBasicDemoModule.hh  GetEnvironmentalDataDemo.hh  GetRaspiStatusDemo.hh  GetSlowADCDataDemo.hh  GetSlowADCDataIncludingPressure.hh  MeasureAccelerationDemo.hh  MeasureTemperatureWithRTDSensorByArduino.hh  MeasureTemperatureWithRTDSensorByMHADC.hh  MeasureTemperatureWithRTDSensorDemo.hh  ReadWaveformDemo.hh  ShutdownSystemDemo.hh
onboard/source/demo/src/: ControlHighVoltageDemo.cc  GBBasicDemoModule.cc  GetEnvironmentalDataDemo.cc  GetRaspiStatusDemo.cc  GetSlowADCDataDemo.cc  GetSlowADCDataIncludingPressure.cc  MeasureAccelerationDemo.cc  MeasureTemperatureWithRTDSensorByArduino.cc  MeasureTemperatureWithRTDSensorByMHADC.cc  MeasureTemperatureWithRTDSensorDemo.cc  ReadWaveformDemo.cc  ShutdownSystemDemo.cc
onboard/source/modules/: CMakeLists.txt
onboard/source/modules/include/: AnalogDiscoveryManager.hh  ControlHighVoltage.hh  DistributeCommand.hh  DividePacket.hh  DumpSerial.hh  EncodedSerialCommunicator.hh  GetArduinoData.hh  GetCompressorData.hh  GetComputerStatus.hh  GetEnvironmentalData.hh  GetMHADCData.hh  GetPressure.hh  GetRaspiStatus.hh  GetSlowADCData.hh  InterpretDAQFormattedTelemetry.hh  InterpretDAQTelemetry.hh  InterpretTelemetry.hh  IoContextManager.hh  MeasureAcceleration.hh  MeasureOrientationByMHADC.hh  MeasureTemperatureWithRTDSensor.hh  MeasureTemperatureWithRTDSensorByMHADC.hh  MosquittoManager.hh  PassTelemetry.hh  PlotWaveform.hh  PressureGaugeManager.hh  PushToMongoDB.hh  PushToMySQL.hh  ReadTelemetry.hh  ReadWaveform.hh  (+12 more)
source/: CMakeLists.txt  serial.cc  serial.hh
source/BME68x-Sensor-API/: CMakeLists.txt
source/balloon/include/: command.hh  telemetry.hh
source/balloon/src/: CMakeLists.txt  command.cc  telemetry.cc
source/core/: CMakeLists.txt
source/core/include/: AnalogDiscoveryIO.hh  BME680IO.hh  CRC16.hh  CommandDefinition.hh  CommandInterpreter.hh  DAQIO.hh  ErrorManager.hh  ICM20948IO.hh  MAX31865IO.hh  SPIInterface.hh  SerialCommand.hh  SerialCommunication.hh  SlowADCIO.hh  SystemControl.hh  SystemStatus.hh  Telemetry.hh  TelemetryDefinition.hh  TelemetryGenerator.hh  max31865IO.hh
source/core/src/: AnalogDiscoveryIO.cc  BME680IO.cc  CRC16.cc  CommandDefinition.cc  CommandInterpreter.cc  DAQIO.cc  DateManager.cc  ErrorManager.cc  ICM20948IO.cc  MAX31865IO.cc  SerialCommand.cc  SerialCommunication.cc  SlowADCIO.cc  SystemControl.cc  SystemStatus.cc  Telemetry.cc  TelemetryDefinition.cc  TelemetryGenerator.cc  max31865IO.cc
source/ground/src/: CMakeLists.txt
source/modules/: CMakeLists.txt
source/modules/include/: AnalogDiscoveryManager.hh  ControlHighVoltage.hh  GetBME680Data.hh  GetEnvironmentalData.hh  GetRaspiStatus.hh  GetSlowADCData.hh  GetSystemStatus.hh  InterpretHKTelemetry.hh  InterpretTelemetry.hh  MeasureAcceleration.hh  MeasureTemperatureWithRTDSensor.hh  PushToMongoDB.hh  ReadDAQ.hh  ReadWaveform.hh  ReceiveCommand.hh  ReceiveTelemetry.hh  RegulateHighVoltage.hh  SPIManager.hh  SendTelemetry.hh  ShutdownSystem.hh  SimpleLoop.hh
source/modules/src/: AnalogDiscoveryManager.cc  ControlHighVoltage.cc  GetBME680Data.cc  GetEnvironmentalData.cc  GetRaspiStatus.cc  GetSlowADCData.cc  GetSystemStatus.cc  InterpretHKTelemetry.cc  InterpretTelemetry.cc  MeasureAcceleration.cc  MeasureTemperatureWithRTDSensor.cc  PushToMongoDB.cc  ReadDAQ.cc  ReadWaveform.cc  ReceiveCommand.cc  ReceiveTelemetry.cc  RegulateHighVoltage.cc  SPIManager.cc  SendTelemetry.cc  ShutdownSystem.cc  SimpleLoop.cc
tools/make_telemetry_root/: CMakeLists.txt  make_telemetry_root.cc  run_multiple.py
tools/socket_test/: CMakeLists.txt  socket_server_test.cc  socket_server_test_async.cc  socket_test.cc  socket_test.py  socket_test_client.py
(+167 files in other folders)
