if(GB_USE_PIGPIO)
  add_subdirectory(BME68x-Sensor-API)
endif(GB_USE_PIGPIO)
if(GB_USE_ICM20948)
  add_subdirectory(ICM20948-linux-i2c)
  install(TARGETS ICM20948 LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
  install(TARGETS I2C LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
endif(GB_USE_ICM20948)
add_subdirectory(core)
add_subdirectory(modules)
